# dj-practice

./: README.md  pyproject.toml
.tmp/: db.sqlite3
config/: settings.py  urls.py
testsite/polls/: admin.py  apps.py  tests.py  urls.py  views.py
testsite/polls/migrations/: 0001_initial.py
testsite/polls/templates/polls/: detail.html
