[tool.poetry]
name = "dj-practice"
version = "0.1.0"
description = "Django related practice package"
authors = ["shkumagai <take.this.2.your.grave@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2.8"
django-debug-toolbar = "^2.1"
djangorestframework = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
